fixed button not align together

--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,11 @@ h1{
     position: relative;
     z-index: 0;
     border-radius: 12px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 70px;
 }
 .btn::after {
     content: "";
